--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "php": ">=7.2"
+        "php": ">=7.2",
+        "illuminate/support": "~5.5 || ^6.8"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
