--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=7.2",
-        "illuminate/support": "~5.5 || ^6.8"
+        "illuminate/support": "~5.5 || ^6.8",
+        "ramsey/uuid": "^3.9"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
